crates/nexus-store/tests/compile_fail/persisted_envelope_lifetime_escape.stderr
error[E0597]: `stream_id` does not live long enough
 --> tests/compile_fail/persisted_envelope_lifetime_escape.rs:8:38
  |
5 |     let envelope = {
  |         -------- borrow later stored here
6 |         let stream_id = String::from("s1");
  |             --------- binding `stream_id` declared here
7 |         let payload = vec![1, 2, 3];
8 |         PersistedEnvelope::<()>::new(&stream_id, Version::from_persisted(1), "E", &payload, ())
  |                                      ^^^^^^^^^^ borrowed value does not live long enough
9 |     };
  |     - `stream_id` dropped here while still borrowed

error[E0597]: `payload` does not live long enough
 --> tests/compile_fail/persisted_envelope_lifetime_escape.rs:8:83
  |
5 |     let envelope = {
  |         -------- borrow later stored here
6 |         let stream_id = String::from("s1");
7 |         let payload = vec![1, 2, 3];
  |             ------- binding `payload` declared here
8 |         PersistedEnvelope::<()>::new(&stream_id, Version::from_persisted(1), "E", &payload, ())
  |                                                                                   ^^^^^^^^ borrowed value does not live long enough
9 |     };
  |     - `payload` dropped here while still borrowed
